# migration-orchestrator

./: .gitignore  Cargo.toml  license.md  package.json  pnpm-lock.yaml  readme.md  tsconfig.json  vitest.config.ts
bindings/: FuncArgument.ts  Function.ts  FunctionTags.ts  MacroArgument.ts  MacroFunc.ts  Migration.ts  MigrationDependency.ts  MigrationFile.ts  MigrationGroup.ts  MigrationTags.ts
example-sql/: add_email_to_users.sql  readme.md
example-sql/readme/: add_last_login_to_user.sql  macros.sql  tables.sql
example-sql/readme-example/: add_email_to_users.sql  create_users.sql
src/: get_sql_filepaths.ts  main.rs  main.ts  migration_parser.rs  migration_parser.test.ts  migration_parser.ts  migration_runner.test.ts  migration_runner.ts  parse_errors.rs  sql_loader.ts
src-sql/: 000-tables.sql  tables.sql
src/commands/: run_single_sql_file.ts  run_sql_from_directory.ts
src/migration_worker/: ExitCodes.ts  MessageKind.ts  migration_worker.ts
src/models/: Migration.test.ts  Migration.ts  MigrationGroup.ts  MigrationGroupTags.ts  MigrationTags.ts  file.rs  function.rs  macro_func.rs  migration.rs  migration_dependency.rs  migration_group.rs  migration_tags.rs  mod.rs
src/utils/: createDependencyGraph.ts  create_dependency_graph.ts  file_exists.test.ts  file_exists.ts  get_sql_filepaths.ts  organizeMigrations.ts  organize_migrations.ts  timedAsync.ts  timed_async.ts
